Bug 492230 - Pin to Task Manager doesn't work from Kickoff/Launcher
Summary: Pin to Task Manager doesn't work from Kickoff/Launcher
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-08-26 17:53 UTC by Parag W
Modified: 2024-08-28 02:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Parag W 2024-08-26 17:53:41 UTC
SUMMARY
Plasma compiled from sources - right clicking on an item (Brave/Dolphin doesn't matter) and clicking Pin to Task Manager does nothing.

STEPS TO REPRODUCE
1. Click on App Launcher 
2. Find an app - Firefox, Dolphin etc - right click and select Pin to Task Manager
3. Nothing happens - the app icon doesn't show up on Task Manager

OBSERVED RESULT
Aug 26 13:44:23 borker plasmashell[371005]: QMetaObject::invokeMethod: No such method
 PlasmoidItem_QML_412::hasLauncher(QVariant)
                                            Candidates are:
                                                hasLauncher(QUrl)
Aug 26 13:44:23 borker plasmashell[371005]: QMetaObject::invokeMethod: No such method
 PlasmoidItem_QML_412::hasLauncher(QVariant)
                                            Candidates are:
                                                hasLauncher(QUrl)
Aug 26 13:44:23 borker plasmashell[371005]: QMetaObject::invokeMethod: No such method
 PlasmoidItem_QML_412::hasLauncher(QVariant)


EXPECTED RESULT
App icon is pinned to task manager.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.11.0-rc5 (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 7900X 12-Core Processor
Memory: 62.4 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 GRE
Manufacturer: ASUS

ADDITIONAL INFORMATION
Launching the app and then doing the same using the app's task manager icon does work.
Comment 1 TraceyC 2024-08-27 01:56:00 UTC
I am not able to reproduced this in Solus Plasma 6.1.4
I *am* able to reproduce it on git-master dev session
Comment 2 Nate Graham 2024-08-27 19:53:35 UTC
Can also reproduce with current git master. When clicking on the menu item, there's an error:

Aug 27 13:52:50 Liberator plasmashell[14932]: QMetaObject::invokeMethod: No such method PlasmoidItem_QML_754::addLauncher(QVariant)
                                              Candidates are:
                                                  addLauncher(QUrl)
Comment 3 Bug Janitor Service 2024-08-28 01:57:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4654
Comment 4 Ismael Asensio 2024-08-28 02:37:10 UTC
Git commit f39b394d964577b21828d17c1d333e0ebc5fd08f by Ismael Asensio.
Committed on 28/08/2024 at 01:52.
Pushed by iasensio into branch 'master'.

applets/kicker: Fix types on metaobject call to addLauncher

Some calls via `QMetaObject::InvokeMethod()` requires an stricter
type now, instead of the generic `QVariant`, because the functions
in task manager's QML code have been type-annotated.

This fixes the action of pinning an item to the task manager
FIXED-IN: 6.2

M  +5    -5    applets/kicker/plugin/containmentinterface.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f39b394d964577b21828d17c1d333e0ebc5fd08f