applets/kicker: Fix types on metaobject call to addLauncher

Some calls via `QMetaObject::InvokeMethod()` requires an stricter
type now, instead of the generic `QVariant`, because the functions
in task manager's QML code have been type-annotated.

This fixes the action of pinning an item to the task manager

BUG: 492230
FIXED-IN: 6.2